--- a/package.json
+++ b/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "@preact/signals-react": "^3.6.0",
+    "@stylexjs/stylex": "^0.16.3",
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.39.1",
+    "@stylexjs/babel-plugin": "^0.16.3",
+    "@stylexjs/eslint-plugin": "^0.16.3",
+    "@stylexjs/postcss-plugin": "^0.16.3",
     "@types/node": "^24.10.0",
     "@types/react": "^19.2.2",
     "@types/react-dom": "^19.2.2",
@@ -25,6 +29,7 @@
     "eslint-plugin-react-hooks": "^7.0.1",
     "eslint-plugin-react-refresh": "^0.4.24",
     "globals": "^16.5.0",
+    "postcss": "^8.5.6",
     "sass": "^1.94.0",
     "typescript": "~5.9.3",
     "typescript-eslint": "^8.46.3",
